--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -2,6 +2,10 @@
 
 html {
   font-family: 'Be Vietnam Pro', sans-serif;
-  background-color: $orange-50;
+  background-color: $white;
   color: $blue-950;
+}
+
+section {
+  padding: 56px 26px 112px 26px;
 }
